--- a/MyHostel_Admin/Pages/Admin_Page/Hostels/Approve.cshtml
+++ b/MyHostel_Admin/Pages/Admin_Page/Hostels/Approve.cshtml
@@ -21,7 +21,92 @@
     <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
     <link id="pagestyle" href="~/admin/css/material-dashboard.css?v=3.0.5" rel="stylesheet" />
+    <style >
+        #map {
+            height: 500px;
+            width : 500px;
+        }
 
+        /*
+         * Optional: Makes the sample page fill the window.
+         */
+        html,
+        body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+
+        #description {
+            font-family: Roboto;
+            font-size: 15px;
+            font-weight: 300;
+        }
+
+        #infowindow-content .title {
+            font-weight: bold;
+        }
+
+        #infowindow-content {
+            display: none;
+        }
+
+        #map #infowindow-content {
+            display: inline;
+        }
+
+        .pac-card {
+            background-color: #fff;
+            border: 0;
+            border-radius: 2px;
+            box-shadow: 0 1px 4px -1px rgba(0, 0, 0, 0.3);
+            margin: 10px;
+            padding: 0 0.5em;
+            font: 400 18px Roboto, Arial, sans-serif;
+            overflow: hidden;
+            font-family: Roboto;
+            padding: 0;
+        }
+
+        #pac-container {
+            padding-bottom: 12px;
+            margin-right: 12px;
+        }
+
+        .pac-controls {
+            display: inline-block;
+            padding: 5px 11px;
+        }
+
+            .pac-controls label {
+                font-family: Roboto;
+                font-size: 13px;
+                font-weight: 300;
+            }
+
+        #pac-input {
+            background-color: #fff;
+            font-family: Roboto;
+            font-size: 15px;
+            font-weight: 300;
+            margin-left: 12px;
+            padding: 0 11px 0 13px;
+            text-overflow: ellipsis;
+            width: 400px;
+        }
+
+            #pac-input:focus {
+                border-color: #4d90fe;
+            }
+
+        #title {
+            color: #fff;
+            background-color: #4d90fe;
+            font-size: 25px;
+            font-weight: 500;
+            padding: 6px 12px;
+        }
+    </style>
 </head>
 
 <body class="g-sidenav-show  bg-gray-200">
@@ -205,11 +290,14 @@
                         @Html.DisplayNameFor(model => model.Hostel.DetailLocation)
                     </dt>
                     <dd class="col-sm-10">
-                        <input id="search-input" type="text" placeholder="Enter your location" value="@Model.Hostel.DetailLocation">
-                    </dd>
+                        @Html.DisplayFor(model => model.Hostel.DetailLocation)
+                    </dd>                  
                 </dl>
-                <div id="map" style="width:1000px;height:500px;">
-                </div>
+                <input id="pac-input"
+                       class="controls"
+                       type="text"
+                       placeholder="Search Box" />
+                <div id="map"></div>
                 <br>
                 <form method="post">
                     <input type="hidden" asp-for="@Model.Hostel.Id" />
@@ -306,8 +394,10 @@
     <script src="~/admin/js/plugins/perfect-scrollbar.min.js"></script>
     <script src="~/admin/js/plugins/smooth-scrollbar.min.js"></script>
     <script src="~/admin/js/plugins/chartjs.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDLsmLiVOBVQKt-PP6Xf5b1zmNR3wqiURI&libraries=places"></script>
-    
+@*    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDLsmLiVOBVQKt-PP6Xf5b1zmNR3wqiURI&libraries=places"></script>
+*@
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDLsmLiVOBVQKt-PP6Xf5b1zmNR3wqiURI&callback=initMap&libraries=places&v=weekly"
+            defer></script>
     <script>
         const sidebarLinks = document.querySelectorAll('.navbar-vertical .navbar-nav>.nav-item .nav-link');
 
@@ -334,47 +424,94 @@
         }
     </script>
     <script>
-        window.onload= initMap();
-        window.onload = searchPlace();
+        //window.onload = searchPlace();
         function initMap() {
             // Create a new map object
-            var map = new google.maps.Map(document.getElementById('map'), {
-                zoom: 15
+            const map = new google.maps.Map(document.getElementById("map"), {
+                center: { lat: 21.029052537846308, lng: 105.80481051079168 }, 
+                zoom: 13,
+                mapTypeId: "roadmap",
+            });
+            const input = document.getElementById("pac-input");
+            const searchBox = new google.maps.places.SearchBox(input);
+
+            map.controls[google.maps.ControlPosition.TOP_LEFT].push(input);
+            // Bias the SearchBox results towards current map's viewport.
+            map.addListener("bounds_changed", () => {
+                searchBox.setBounds(map.getBounds());
             });
 
-            // Get the user's location
-            if (navigator.geolocation) {
-                navigator.geolocation.getCurrentPosition(function (position) {
-                    // Set the map's center to the user's location
-                    var pos = {
-                        lat: position.coords.latitude,
-                        lng: position.coords.longitude
-                    };
-                    map.setCenter(pos);
-                });
-            }
-            console.log("page is fully loaded");
-        }
-        function searchPlace() {
-            var input = document.getElementById('search-input');
-            var searchBox = new google.maps.places.SearchBox(input);
+            let markers = [];
 
-            searchBox.addListener('places_changed', function () {
-                var places = searchBox.getPlaces();
+            // Listen for the event fired when the user selects a prediction and retrieve
+            // more details for that place.
+            searchBox.addListener("places_changed", () => {
+                const places = searchBox.getPlaces();
+
                 if (places.length == 0) {
                     return;
                 }
 
-                // Get the location of the first place in the search results
-                var place = places[0];
-                var lat = place.geometry.location.lat();
-                var lng = place.geometry.location.lng();
+                // Clear out the old markers.
+                markers.forEach((marker) => {
+                    marker.setMap(null);
+                });
+                markers = [];
 
-                // Center the map on the selected location
-                map.setCenter({ lat: lat, lng: lng });
+                // For each place, get the icon, name and location.
+                const bounds = new google.maps.LatLngBounds();
+
+                places.forEach((place) => {
+                    if (!place.geometry || !place.geometry.location) {
+                        console.log("Returned place contains no geometry");
+                        return;
+                    }
+
+                    const icon = {
+                        url: place.icon,
+                        size: new google.maps.Size(71, 71),
+                        origin: new google.maps.Point(0, 0),
+                        anchor: new google.maps.Point(17, 34),
+                        scaledSize: new google.maps.Size(25, 25),
+                    };
+
+                    // Create a marker for each place.
+                    markers.push(
+                        new google.maps.Marker({
+                            map,
+                            icon,
+                            title: place.name,
+                            position: place.geometry.location,
+                        })
+                    );
+                    if (place.geometry.viewport) {
+                        // Only geocodes have viewport.
+                        bounds.union(place.geometry.viewport);
+                    } else {
+                        bounds.extend(place.geometry.location);
+                    }
+                });
+                map.fitBounds(bounds);
             });
-            console.log("page is fully loaded places");
+            
+            // Get the user's location
+            //if (navigator.geolocation) {
+            //    navigator.geolocation.getCurrentPosition(function (position) {
+            //        // Set the map's center to the user's location
+            //        var pos = {
+            //            lat: position.coords.latitude,
+            //            lng: position.coords.longitude
+            //        };
+                    
+            //        map.setCenter(pos);
+            //    });
+            //}
+            console.log("page is fully loaded");
         }
+        window.initMap = initMap;
+
+
+       
     </script>
     <!-- Github buttons -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
