--- a/MyHostel_Admin/Pages/Admin_Page/Index.cshtml
+++ b/MyHostel_Admin/Pages/Admin_Page/Index.cshtml
@@ -18,7 +18,7 @@
                 </div>
                 <hr class="dark horizontal my-0">
                 <div class="card-footer p-3">
-                    <p class="mb-0"><span class="text-success text-sm font-weight-bolder">+@Model.hostelDiff.ToString("#.##")% </span>than last month</p>
+                    <p class="mb-0"><span class="text-success text-sm font-weight-bolder">+@Model.hostelDiff.ToString("#.##") </span>than last month</p>
                 </div>
             </div>
         </div>
